fix: cookies dialog button contrast (#1010)
- fix cookies dialog button contrast in dark mode

Fixes #1008

--- a/material.angular.io/src/app/shared/cookie-popup/_cookie-popup-theme.scss
+++ b/material.angular.io/src/app/shared/cookie-popup/_cookie-popup-theme.scss
@@ -12,10 +12,10 @@
   app-cookie-popup {
     .popup {
       color: if($is-dark-theme,
-        map.get(map.get(mat.$grey-palette, contrast), 50),
-        map.get(mat.$dark-theme-foreground-palette, secondary-text)
+        map.get(mat.$dark-theme-foreground-palette, secondary-text),
+        map.get(map.get(mat.$grey-palette, contrast), 50)
       );
-      background: if($is-dark-theme, map.get(mat.$grey-palette, 50), #252525);
+      background: if($is-dark-theme, #252525, map.get(mat.$grey-palette, 50));
     }
   }
 }
